# workflow-engine

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cursor/rules/: postman-sync.mdc
migrations/: 001_init_workflows.sql  002_init_executions.sql  003_init_steps.sql  004_service_registry.sql
postman/: Workflow-Engine-API.postman_collection.json
scripts/: docker-build-push.sh
src/: definition.rs  error.rs  executor.rs  expression.rs  lib.rs  main.rs  registry.rs  storage.rs  triggers.rs
src/nodes/: http_request.rs  http_trigger.rs  merge.rs  mod.rs  service_call.rs
